--- a/SeleniumProject/test-output/emailable-report.html
+++ b/SeleniumProject/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">86</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,520</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">SeleniumBasic.TestngAnnotations</td><td><a href="#m0">sample</a></td><td rowspan="1">1755681899184</td><td rowspan="1">11</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">TestScript.LoginTest</td><td><a href="#m0">verifyInvalidUsernameAndValidPassword</a></td><td rowspan="1">1755848803302</td><td rowspan="1">327</td></tr><tr class="passedeven"><td><a href="#m1">verifyUserLoginWithValidCredential</a></td><td rowspan="1">1755848805385</td><td rowspan="1">1145</td></tr><tr class="passedeven"><td><a href="#m2">verifyUserLoginWithWrongCredential</a></td><td rowspan="1">1755848809134</td><td rowspan="1">463</td></tr><tr class="passedeven"><td><a href="#m3">verifyValidUsernameAndInvalidPassword</a></td><td rowspan="1">1755848819424</td><td rowspan="1">528</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">SeleniumBasic.TestngAnnotations#sample</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TestScript.LoginTest#verifyInvalidUsernameAndValidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestScript.LoginTest#verifyUserLoginWithValidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestScript.LoginTest#verifyUserLoginWithWrongCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestScript.LoginTest#verifyValidUsernameAndInvalidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
