--- a/SeleniumProject/test-output/index.html
+++ b/SeleniumProject/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\HP\AppData\Local\Temp\testng-eclipse-1969170210\testng-customsuite.xml</span>
+                    <span>C:\Users\HP\AppData\Local\Temp\testng-eclipse--1255632264\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,22 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestScript.LoginTest" class="method navigator-link" hash-for-method="verifyInvalidUsernameAndValidPassword">verifyInvalidUsernameAndValidPassword</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="TestScript.LoginTest" class="method navigator-link" hash-for-method="verifyUserLoginWithValidCredential">verifyUserLoginWithValidCredential</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestScript.LoginTest" class="method navigator-link" hash-for-method="verifyUserLoginWithWrongCredential">verifyUserLoginWithWrongCredential</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestScript.LoginTest" class="method navigator-link" hash-for-method="verifyValidUsernameAndInvalidPassword">verifyValidUsernameAndInvalidPassword</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,30 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyInvalidUsernameAndValidPassword">
-                  </a> <!-- verifyInvalidUsernameAndValidPassword -->
-                  <span class="method-name">verifyInvalidUsernameAndValidPassword</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="verifyUserLoginWithValidCredential">
                   </a> <!-- verifyUserLoginWithValidCredential -->
                   <span class="method-name">verifyUserLoginWithValidCredential</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyUserLoginWithWrongCredential">
-                  </a> <!-- verifyUserLoginWithWrongCredential -->
-                  <span class="method-name">verifyUserLoginWithWrongCredential</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyValidUsernameAndInvalidPassword">
-                  </a> <!-- verifyValidUsernameAndInvalidPassword -->
-                  <span class="method-name">verifyValidUsernameAndInvalidPassword</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -172,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\HP\AppData\Local\Temp\testng-eclipse-1969170210\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\HP\AppData\Local\Temp\testng-eclipse--1255632264\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -181,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;TestScript.LoginTest&quot;/&gt;
+      &lt;class name=&quot;TestScript.LoginTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;verifyUserLoginWithValidCredential&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- TestScript.LoginTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -221,28 +189,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyUserLoginWithValidCredential')
 data.setCell(0, 2, 'TestScript.LoginTest')
-data.setCell(0, 3, 1145);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyValidUsernameAndInvalidPassword')
-data.setCell(1, 2, 'TestScript.LoginTest')
-data.setCell(1, 3, 528);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyUserLoginWithWrongCredential')
-data.setCell(2, 2, 'TestScript.LoginTest')
-data.setCell(2, 3, 463);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyInvalidUsernameAndValidPassword')
-data.setCell(3, 2, 'TestScript.LoginTest')
-data.setCell(3, 3, 327);
+data.setCell(0, 3, 1226);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -257,9 +213,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">TestScript.LoginTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">verifyInvalidUsernameAndValidPassword</span>
+                <br/>
+                <span class="ignored-method-name">verifyUserLoginWithWrongCredential</span>
+                <br/>
+                <span class="ignored-method-name">verifyValidUsernameAndInvalidPassword</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -274,48 +241,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyInvalidUsernameAndValidPassword</span>
-                <span class="method-start">2812 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeAndQuit</span>
-                <span class="method-start">3145 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">initializeBrowser</span>
-                <span class="method-start">3149 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
                 <span class="method-name">verifyUserLoginWithValidCredential</span>
-                <span class="method-start">4895 ms</span>
+                <span class="method-start">4225 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeAndQuit</span>
-                <span class="method-start">6043 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">initializeBrowser</span>
-                <span class="method-start">6047 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyUserLoginWithWrongCredential</span>
-                <span class="method-start">8644 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeAndQuit</span>
-                <span class="method-start">9113 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">initializeBrowser</span>
-                <span class="method-start">9117 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyValidUsernameAndInvalidPassword</span>
-                <span class="method-start">18934 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeAndQuit</span>
-                <span class="method-start">19467 ms</span>
+                <span class="method-start">5459 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
